# blog-project

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  update_requirements.sh
site_backend/: manage.py
site_backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
site_backend/blog/migrations/: 0001_initial.py  0002_article_cover_image.py  0003_article_main_image.py
site_backend/site_backend/: asgi.py  settings.py  urls.py  wsgi.py
site_backend/templates/: login.html
